--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -8,7 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-cli": "^1.3.2"
+  },
   "devDependencies": {
     "babelify": "^10.0.0",
     "grunt": "^1.0.3",
